# EggLogger

./: README.md  pyproject.toml
egglog/: __init__.py
